Fixup responsiveness, sizing of canvas bug on iOS

--- a/style.css
+++ b/style.css
@@ -106,23 +106,25 @@ hr {
 
 /* name */
 .soich-Name {
-	position: relative;
-	height: 2em;
-	width: 5em;
-	margin-block: 3rem;
-	white-space: nowrap;
-	font-size: 4em;
-	line-height: 1em;
+  margin-block: 3rem;
+  width: 24rem;
+  height: 4.25rem;
+  aspect-ratio: 24 / 4.25;
+  max-width: 100%;
+}
+.soich-Name-first,
+.soich-Name-last {
 	text-transform: uppercase;
+	font-family: var(--font-family);
+	font-weight: 700;
+	font-size: 74px;
+	fill: currentColor;
 }
 .soich-Name-first {
 	color: var(--gray-900);
 }
 .soich-Name-last {
 	color: var(--gray-600);
-	position: relative;
-	left: -2.085em;
-	top: 0.85em;
 }
 
 /* typography */
@@ -207,10 +209,10 @@ h3 {
 .soich-Item {
   max-width: 100%;
   margin: var(--document-padding);
-  
   display: flex;
   flex-direction: row;
   gap: var(--document-padding);
+  align-items: center;
 }
 
 .soich-Item + .soich-Item {
@@ -219,9 +221,9 @@ h3 {
 
 .soich-Item-image {
   width: 24rem;
-  aspect-ratio : 1 / 1;
   max-width: 100%;
-	flex-shrink: 0;
+  flex-shrink: 0;
+  aspect-ratio: 1 / 1;
 }
 
 .soich-Item-description {
@@ -272,6 +274,12 @@ dd {
 		flex-direction: column;
 		gap: 0;
 	}
+  
+  .soich-Item,
+  .soich-Item + .soich-Item {
+    /* descriptions go under items on mobile */
+    flex-direction: column;
+  }
 }
 
 /* do stuff for phones here */
@@ -320,13 +328,7 @@ dd {
     /* center logo on mobile */
     align-self: center;
   }
-  
-  .soich-Item,
-  .soich-Item + .soich-Item {
-    /* descriptions go under items on mobile */
-    flex-direction: column;
-  }
- 
+
   .soich-Item-description {
     border-left: none;
   }
@@ -334,6 +336,7 @@ dd {
 
 /* Model viewer bits */
 model-viewer {
+  aspect-ratio: 1 / 1;
   width: 100%;
   height: 100%;
 
